# IPPD-Velocidade-de-rotacao-de-corpos-em-Rust

./: Cargo.toml
src/: main.rs  main.rsZone.Identifier
