[package]
name = "ippd-particle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.1"
rand = "0.8.5"
mpi = "0.7.0"
rust_mpi = "0.0.3"
bincode = "1.3"